css/style.css
@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Silkscreen:wght@400;700&family=Yarndings+12&display=swap');

* {
  box-sizing: border-box;
}

body {
  --primary-color: #539987;
  --secondary-color: #52FFB8;
  --tertiary-color: #ff4d4d;
  --quaternary-color: #615756;
  --quinary-color: #4f4f4f;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100dvh;
  overflow-y: hidden;
  font-family: Silkscreen, sans-serif;
  font-size: 30px;
}

/* INITIAL STATE OF GAME SECTION */
#game-intro {
  text-align: center; 
}

#game-title {
  font-size: 2.5em;
}

#start-btn {
  font-size: 12px;
  font-weight: 600;
  background-color: var(--secondary-color);
  padding: 10px;
  border-top: 4px solid black;
  border-right: 4px solid black;
  border-left: 1px solid black;
  border-bottom: 1px solid black;
  border-radius: 15px;
}

#start-btn:hover {
  cursor: pointer;
}

/* GAME INITIALIZED SECTION */
#game {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 2fr;
  width: 70%;
  height: 80%;
  padding-top: 60px;
}

#game-display {
  justify-self: center;
  align-self: self-start;
}

.game-components {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 130px;
}

.game-components > div {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 41px;
}

.game-components > div {
  display: flex;
  justify-content: center;
  text-align: center;
  width: 100%;
  height: 41px;
}

@media (min-width: 1270px) {
  #game-display {
    margin-right: 50px;
  }
}

#cookie {
  width: 40px;
}

#buzzer {
  height: 90px;
  width: 90px;
  background-color: var(--tertiary-color);
  border: 8px solid var(--quinary-color);
  border-radius: 50%;
}

#buzzer:hover {
  cursor: pointer;
}

/* ANIMATIONS & ACTIONS */

/* FADE OUT ANIMATION */
.fade-out {
  transition: 1.5s;
  color: transparent;
  background-color: transparent !important;
}

/* SCALE ANIMATIONS */
.scale {
  transition: 0.5s;
  transform: scale(2);
}

.de-scale {
  transition: 0.5s;
  transform: scale(1);
}

/* ROTATE ANIMATION */
.rotate {
  transition: 0.8s;
  transform: rotate(1turn);
}

.remove {
  display: none;
}

.hide {
  visibility: hidden;
}

